new items added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
     <img src="Assets/Asset19.png" alt="designe lement"width="100%">
     <h2>OUR PROJECTS</h2>
   </div>
+  <div class="projects">
+    <div class="twoInOne">
+    <div class="project top">
+      <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
+      <h2>Project KATOE</h2>
+    </div>
+    <div class="project top">
+      <img src="Assets/two.png" alt="bacgkround of Africa" width="100%">
+      <h2>Back 2 School Drive</h2>
+    </div>
+    </div>
+    <div class="twoInOne">
+    <div class="project top">
+      <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
+      <h2>Sanitation Project</h2>
+    </div>
+    <div class="project top">
+      <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
+      <h2>Children Sponsered</h2>
+    </div>
+    </div>
+  </div>
+
 </div>
      
         <script src="javascript/app.js"></script>
