--- a/index.html
+++ b/index.html
@@ -58,20 +58,48 @@
     <div class="project top">
       <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
       <h2>Project KATOE</h2>
+      <div id="myProgress">
+        <div id="myBar1"></div>
+      </div>
+      <div class="priceProgress">
+        <p>100% raised</p>
+        <p>$3,000 goal</p>
+      </div>
     </div>
     <div class="project top">
       <img src="Assets/two.png" alt="bacgkround of Africa" width="100%">
       <h2>Back 2 School Drive</h2>
+      <div id="myProgress">
+        <div id="myBar2"></div>
+      </div>
+      <div class="priceProgress">
+        <p>100% raised</p>
+        <p>$1,000 goal</p>
+      </div>
     </div>
     </div>
     <div class="twoInOne">
     <div class="project top">
       <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
       <h2>Sanitation Project</h2>
+      <div id="myProgress">
+        <div id="myBar3"></div>
+      </div>
+      <div class="priceProgress">
+        <p>1% raised</p>
+        <p>$10,000 goal</p>
+      </div>
     </div>
     <div class="project top">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
       <h2>Children Sponsered</h2>
+      <div id="myProgress">
+        <div id="myBar4"></div>
+      </div>
+      <div class="priceProgress">
+        <p>25% supported</p>
+        <p>2,000 kids goal</p>
+      </div>
     </div>
     </div>
   </div>
