--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <p>100% raised</p>
         <p>$3,000 goal</p>
       </div>
+      <a href="#" class="learnMore">Learn more...</a>
     </div>
     <div class="project top">
       <img src="Assets/two.png" alt="bacgkround of Africa" width="100%">
