--- a/katoe.html
+++ b/katoe.html
@@ -43,81 +43,31 @@
         </svg>
     <h1 class="qualityEducation">QUALITY EDUCATION <br>& <br>WATER FOR ALL</h1>
   </div>
-  <div id="partTwo">
-      <h2>WILL YOU JOIN US</h2>
-      <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
-        OF THE PEOPLE OF TOGO?</p>
-        <a>DONATE NOW!</a>
-  </div>
+  
   <div id="ourProjects">
     <img src="Assets/Asset19.png" alt="designe lement"width="100%">
-    <h2>OUR PROJECTS</h2>
+    <h2>PROJECT KATOE</h2>
   </div>
-  <div class="projects">
-    <div class="twoInOne">
-    <div class="project top">
-      <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
-      <h2>Project KATOE</h2>
-      <div id="myProgress">
-        <div id="myBar1"></div>
-      </div>
-      <div class="priceProgress">
-        <p>100% raised</p>
-        <p>$3,000 goal</p>
-      </div>
-      <a href="katoe.html" class="learnMore">Learn more...</a>
-    </div>
-    <div class="project top">
-      <img src="Assets/two.png" alt="bacgkround of Africa" width="100%">
-      <h2>Back 2 School Drive</h2>
-      <div id="myProgress">
-        <div id="myBar2"></div>
-      </div>
-      <div class="priceProgress">
-        <p>100% raised</p>
-        <p>$1,000 goal</p>
-      </div>
-      <a href="#" class="learnMore">Learn more...</a>
-    </div>
-    </div>
-    <div class="twoInOne">
-    <div class="project top">
-      <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
-      <h2>Sanitation Project</h2>
-      <div id="myProgress">
-        <div id="myBar3"></div>
-      </div>
-      <div class="priceProgress">
-        <p>1% raised</p>
-        <p>$10,000 goal</p>
-      </div>
-      <a href="#" class="learnMore">Learn more...</a>
-    </div>
-    <div class="project top">
-      <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
-      <h2>Children Sponsered</h2>
-      <div id="myProgress">
-        <div id="myBar4"></div>
-      </div>
-      <div class="priceProgress">
-        <p>25% supported</p>
-        <p>2,000 kids goal</p>
-      </div>
-      <a href="#" class="learnMore">Learn more...</a>
-    </div>
-    </div>
+  <div class="katoe">
+    <img src="Assets/Asset21.png" alt="kid gathering water in bottle" width="100%">
+    <p>The Katoe Project is QEWFA’s first large scale project in Togo, West Africa which will kick off all of the great things we plan to execute in the area. Katoe is a small village about 118 KM outside of Lome, Togo’s capital city. The only existing economy of sorts is agriculture where the women and children of the village set out to the markets each day in hopes of selling their crop then make the 2km trek back to the village, often by foot, to cook and take care of their families. The roads are not paved and there is no drinkable water on the way to provide any relief to the travelers. Currently, there is no electricity and no running water in or around the village.</p>
+    <p>There is also no school within the village. The nearest school for children to attend is approximately 4 km away in a neighboring village. Because of the scarcity of drinkable water in Katoe both hygiene and hydration are two extremely important things that are inevitably neglected and are the main culprits behind poor school attendance, cleanliness, and the declining health and hygienic conditions of the children and the families.  </p>
+    <p>With the nearest hospital over 6 km away, villagers rarely get the proper medical attention that is required for both the really young and the elderly and everyone in between. Just as water is scare so are the likes of transportation so medical emergencies, child birth, accidents, and the sickly often go unattended and/or undiagnosed</p>
+    <p>Villagers must make the journey to the nearest water source in other villages and to gather and take back what they can carry to their families. Conditions worsen during the dry season when there is no rain water to collect and the nearby wildlife drink what little water does manage to pool after a light rain.further contributing to the harsh living conditions of the inhabitants.</p>
+    <img src="Assets/Asset22.png" alt="just a water hole" width="100%">
   </div>
-  <div class="aboutUs">
-    <img src="Assets/Group92.png" alt="team members picture" width="100%" class="people">
-    <img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">
-    <h1 class="usAbout">ABOUT US</h1>
-    <h3>QUALITY EDUCATION <br>
-      & WATER FOR ALL <span>(QEWFA)</span></h3>
-      <p>	QEWFA is a 501(c)3 nonprofit organization headquartered in Tucson, Arizona. We provide sustainable solutions to the community of Togo that addresses lack of water, contaminated water, and methods of collecting clean drinkable water in Togo. We fund and implement life-changing water well systems to drive economic development and build self-sufficient communities.<br><br>
 
-        At QEWFA our responsibility to the people and communities we serve stretches far beyond simply providing water. We aim to build quality wells, educate people to maintain these wells, and leave the community with sustainable methods to collect clean and drinkable water long after our projects are implemented.<br><br>
-      
-        QEWFA was founded by Yao Akato, a native of Togo, to help develop educational resources, improve sanitation facilities, and to provide water wells to the marginalized and impoverished communities in his homeland.</p>
+  <div class="project top tops">
+    <img src="Assets/one.png" alt="bacgkround of Africa" width="100%">
+    <h2>Project KATOE</h2>
+    <div id="myProgress">
+      <div id="myBar1"></div>
+    </div>
+    <div class="priceProgress">
+      <p>100% raised</p>
+      <p>$3,000 goal</p>
+    </div>
+   
   </div>
   <div class="footer">
     <img src="Assets/Asset24.png" alt="logo Seal of Transperency" width="70px">
