--- a/katoe.html
+++ b/katoe.html
@@ -55,6 +55,8 @@
     <p>With the nearest hospital over 6 km away, villagers rarely get the proper medical attention that is required for both the really young and the elderly and everyone in between. Just as water is scare so are the likes of transportation so medical emergencies, child birth, accidents, and the sickly often go unattended and/or undiagnosed</p>
     <p>Villagers must make the journey to the nearest water source in other villages and to gather and take back what they can carry to their families. Conditions worsen during the dry season when there is no rain water to collect and the nearby wildlife drink what little water does manage to pool after a light rain.further contributing to the harsh living conditions of the inhabitants.</p>
     <img src="Assets/Asset22.png" alt="just a water hole" width="100%">
+    <p>QEWFA does not plan to solve all of these problems over night or even tackle them all at once but we do plan to be impactful and initiate positive change and improvement by simply providing people of KATOE  with a basic necessity we need no matter the color, social status, religion, or creed. That is, clean drinkable water.</p>
+    <p>QEWFA will be installing solar powered water wells in a central location in Katoe that will give the people of the village access to clean drinkable water. The presence of local clean drinking water will improve hygienic conditions, improve health conditions, augmentation in school and education percentage ,decrease mortality, and ultimately bring jobs to the village as the wells will need to be properly maintained long after QEWFAs presence is gone. </p>
   </div>
 
   <div class="project top tops">
@@ -67,7 +69,14 @@
       <p>100% raised</p>
       <p>$3,000 goal</p>
     </div>
-   
+  </div>
+  <div class="giveNow">
+    <img src="Assets/Group112x.png" alt="design element" width="100%">
+    <div class="middle">
+    <h2>GIVE TO PROJECT 
+      KATOE</h2>
+      <a href="#">DONATE NOW!</a>
+    </div>
   </div>
   <div class="footer">
     <img src="Assets/Asset24.png" alt="logo Seal of Transperency" width="70px">
