updates and about added

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <div class="overlay-content">
             <a href="index.html">HOME</a>
             <a href="#">PROJECTS</a>
-            <a href="about.html">ABOUT</a>
+            <a href="#">ABOUT</a>
             <a href="#">DONATE</a>
             </div>
   
