donate page added.

--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,9 @@
             <!-- Overlay content -->
             <div class="overlay-content">
             <a href="index.html">HOME</a>
-            <a href="projects.html">PROJECTS</a>
+            <a href="#">PROJECTS</a>
             <a href="about.html">ABOUT</a>
-            <a href="donate.html">DONATE</a>
+            <a href="#">DONATE</a>
             </div>
   
   </div>
