--- a/about.html
+++ b/about.html
@@ -46,7 +46,8 @@
       TO BUILD
       TOMORROW</h1>
   </div>
-  <div class="threeContainers">
+  <img src="Assets/Group1162x.png" alt="design elements with information" width="100%" class="threeCont">
+ <!-- <div class="threeContainers">
     <div class="div1">
     <img src="Assets/Asset3.png" alt="picture of kids walking in Africa" width="100%">
     <div class="headToe headToeTwo">
@@ -71,7 +72,7 @@
           ELEMENTARY SCHOOL</h5>
         </div>
       </div>
-  </div>
+  </div>-->
   <div id="ourProjects" class="heather">
     <img src="Assets/Asset111y.png" alt="designe lement"width="100%">
     <h2 class="heather2">PROJECT KATOE</h2>
