--- a/index.html
+++ b/index.html
@@ -43,16 +43,20 @@
         </svg>
     <h1 class="qualityEducation">QUALITY EDUCATION <br>& <br>WATER FOR ALL</h1>
   </div>
+  <img src="Assets/Group123456.png" alt="design elements with information" width="100%" class="threeCont">
   <div id="partTwo">
       <h2>WILL YOU JOIN US</h2>
       <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
         OF THE PEOPLE OF TOGO?</p>
         <a>DONATE NOW!</a>
   </div>
-  <div id="ourProjects">
-    <img src="Assets/Asset19.png" alt="designe lement"width="100%">
+  <!--<div id="ourProjects">
+    <img src="Assets/Asset19.png" alt="design element" class="purpleProject">
     <h2>OUR PROJECTS</h2>
-  </div>
+  </div>-->
+  <div class="box effect2">
+    OUR PROJECTS
+    </div>
   <div class="projects">
     <div class="twoInOne">
     <div class="project top">
