--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   </div>
   <div class="aboutUs">
     <img src="Assets/Group92.png" alt="team members picture" width="100%" class="people">
-    <img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">
-    <h1 class="usAbout">ABOUT US</h1>
+   <!--<img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">--> 
+    <div class="box effect2">ABOUT US</div>
     <h3>QUALITY EDUCATION <br>
       & WATER FOR ALL <span>(QEWFA)</span></h3>
       <p>	QEWFA is a 501(c)3 nonprofit organization headquartered in Tucson, Arizona. We provide sustainable solutions to the community of Togo that addresses lack of water, contaminated water, and methods of collecting clean drinkable water in Togo. We fund and implement life-changing water well systems to drive economic development and build self-sufficient communities.<br><br>
@@ -138,13 +138,21 @@
           <button type="submit" class="btn btn-lg btn-dark btn-block">SIGN UP</button>
       </form>
   </div>
+  <div class="infoThree">
+    <div class="justOne">
   <img src="Assets/Asset26.svg" alt="symbol of a location" width="25px">
   <p>255 NORTH ROSEMONT BOULEVARD <br>PO BOX 57333,
     TUCSON, AZ, 85711</p>
+  </div>
+  <div class="justOne">
     <img src="Assets/Asset27.svg" alt="Symbol of mail" width="25px">
     <p>INFO@QEWFA.ORG</p>
+  </div>
+  <div class="justOne">
     <img src="Assets/Asset25.svg" alt="symbol of a phone" width="25px">
     <p>UNITED STATES 520-276-6627</p>
+  </div>
+  </div>
     <h5>WE RESPECT YOUR PRIVACY.
       <br><br>
 
