--- a/katoe.html
+++ b/katoe.html
@@ -82,7 +82,7 @@
     <div class="middle">
     <h2>GIVE TO PROJECT 
       KATOE</h2>
-      <a href="#">DONATE NOW!</a>
+      <a href="donate.html">DONATE NOW!</a>
     </div>
   </div>
 </div>
