--- a/about.html
+++ b/about.html
@@ -73,13 +73,16 @@
         </div>
       </div>
   </div>-->
-  <div id="ourProjects" class="heather">
+  <!--<div id="ourProjects" class="heather">
     <img src="Assets/Asset111y.png" alt="designe lement"width="100%">
     <h2 class="heather2">PROJECT KATOE</h2>
-  </div>
+  </div>-->
+  <div class="box effect2">
+    MEET THE TEAM
+    </div>
   <div class="theTeam">
     <div class="member">
-      <img src="Assets/Asset17.png" alt="picture of a team Member" width="80%">
+      <img src="Assets/Asset17.png" alt="picture of a team Member" width="310px">
       <h2>YAO AKATO</h2>
       <p>Yao Akato here, I am the Founder & CEO of Quality Education & Water For All (QEWFA). I am originally from Togo, West Africa but have been living in the US for the last 11 years. I have always had a passion for helping people and being a beacon of change and improvement. It has been my life’s goal to help women and children from a very young age and It means the world to me that these goals are coming to reality. What made me want to start this organization was the realization I received during my first trip back home only to see that nothing had really changed in the 10 years I had been gone. I knew that I had to act and be the change I wanted to see.</p>
     </div>
