--- a/katoe.html
+++ b/katoe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <title>QEWFA-QUALITY EDUCATION & WATER FOR ALL (QEWFA)</title>
+        <title>QEWFA-Project Katoe</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="CSS/responsive.css">
         <link rel="stylesheet" href="CSS/styles.css">
