--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       TO BUILD
       TOMORROW</h1>
   </div>
-  <img src="Assets/Group123456.png" alt="design elements with information" width="100%" class="threeCont">
+  <img src="Assets/Group1162x.png" alt="design elements with information" width="100%" class="threeCont">
  <!-- <div class="threeContainers">
     <div class="div1">
     <img src="Assets/Asset3.png" alt="picture of kids walking in Africa" width="100%">
