--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </svg>
     <h1 class="qualityEducation">QUALITY EDUCATION <br>& <br>WATER FOR ALL</h1>
   </div>
-  <img src="Assets/Group123456.png" alt="design elements with information" width="100%" class="threeCont">
+  <img src="Assets/Group1162x.png" alt="design elements with information" width="100%" class="threeCont">
   <div id="partTwo">
       <h2>WILL YOU JOIN US</h2>
       <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
