--- a/about.html
+++ b/about.html
@@ -129,13 +129,21 @@
           <button type="submit" class="btn btn-lg btn-dark btn-block">SIGN UP</button>
       </form>
   </div>
+  <div class="infoThree">
+    <div class="justOne">
   <img src="Assets/Asset26.svg" alt="symbol of a location" width="25px">
   <p>255 NORTH ROSEMONT BOULEVARD <br>PO BOX 57333,
     TUCSON, AZ, 85711</p>
+  </div>
+  <div class="justOne">
     <img src="Assets/Asset27.svg" alt="Symbol of mail" width="25px">
     <p>INFO@QEWFA.ORG</p>
+  </div>
+  <div class="justOne">
     <img src="Assets/Asset25.svg" alt="symbol of a phone" width="25px">
     <p>UNITED STATES 520-276-6627</p>
+  </div>
+  </div>
     <h5>WE RESPECT YOUR PRIVACY.
       <br><br>
 
