--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
   </div>
   <img src="Assets/Group1162x.png" alt="design elements with information" width="100%" class="threeCont">
   <div id="partTwo">
-      <h2>WILL YOU JOIN US</h2>
-      <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
-        OF THE PEOPLE OF TOGO?</p>
         <a>DONATE NOW!</a>
   </div>
   <!--<div id="ourProjects">
@@ -78,24 +75,24 @@
         <div id="myBar2"></div>
       </div>
       <div class="priceProgress">
-        <p>100% raised</p>
+        <p>3% raised</p>
         <p>$1,000 goal</p>
       </div>
-      <a href="#" class="learnMore">Learn more...</a>
+      <a href="Back-2-school-drive.html" class="learnMore">Learn more...</a>
     </div>
     </div>
     <div class="twoInOne">
     <div class="project top">
       <img src="Assets/three.png" alt="bacgkround of Africa" width="100%">
-      <h2>Sanitation Project</h2>
+      <h2>Community Center</h2>
       <div id="myProgress">
         <div id="myBar3"></div>
       </div>
       <div class="priceProgress">
         <p>1% raised</p>
-        <p>$10,000 goal</p>
+        <p>$40,000 goal</p>
       </div>
-      <a href="#" class="learnMore">Learn more...</a>
+      <a href="Community-Center.html" class="learnMore">Learn more...</a>
     </div>
     <div class="project top">
       <img src="Assets/four.png" alt="bacgkround of Africa" width="100%">
@@ -107,7 +104,7 @@
         <p>25% supported</p>
         <p>2,000 kids goal</p>
       </div>
-      <a href="#" class="learnMore">Learn more...</a>
+      <a href="Children-Sponsered.html" class="learnMore">Learn more...</a>
     </div>
     </div>
   </div>
