all foters updated

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         QEWFA was founded by Yao Akato, a native of Togo, to help develop educational resources, improve sanitation facilities, and to provide water wells to the marginalized and impoverished communities in his homeland.</p>
   </div>
   <div class="footer">
-    <img src="Assets/Asset24.png" alt="logo Seal of Transperency" width="70px">
+   <h1>Stay connected with QEWFA!</h1>
     <div class="container">
       <form target="_blank" action="https://formsubmit.co/aleqsandregor@gmail.com" method="POST">
           <div class="form-group">
@@ -135,21 +135,17 @@
           <button type="submit" class="btn btn-lg btn-dark btn-block">SIGN UP</button>
       </form>
   </div>
-  <div class="infoThree">
-    <div class="justOne">
-  <img src="Assets/Asset26.svg" alt="symbol of a location" width="25px">
-  <p>255 NORTH ROSEMONT BOULEVARD <br>PO BOX 57333,
-    TUCSON, AZ, 85711</p>
+  <div class="iconic">
+    <a href="https://www.facebook.com/QEWFA.ORG/" target="__blank"><img src="Assets/facebook.png" alt="the icon of Facebook" width="50px"></a>
+    <a href="https://www.instagram.com/qewfa_org/" target="__blank"><img src="Assets/instagram.png" alt="the icon of instagram" width="50px"></a>
+    <a href="https://www.youtube.com/channel/UC5qDTVSln5iRxAosmqt7y9A" target="__blank"><img src="Assets/youtube.png" alt="the icon of youtube" width="50px"></a>
+    <a href="https://www.linkedin.com/company/qewfa-quality-education-water-for-all/?viewAsMember=true" target="__blank"><img src="Assets/linkedIn.png" width="50px" alt="the icon of linked in"></a>
+    <a href="https://goo.gl/maps/w913mv5cYEpNgSst7" target="__blank"><img src="Assets/location.png" width="50px" alt="the icon of location"></a>
+    <a href="mailto:INFO@QEWFA.ORG"><img src="Assets/email.png" width="50px" alt="the icon of email"></a>
+    <a href="tel:1520-276-6627"><img src="Assets/phone.png" width="50px" alt="the icon of a phone"></a>
   </div>
-  <div class="justOne">
-    <img src="Assets/Asset27.svg" alt="Symbol of mail" width="25px">
-    <p>INFO@QEWFA.ORG</p>
-  </div>
-  <div class="justOne">
-    <img src="Assets/Asset25.svg" alt="symbol of a phone" width="25px">
-    <p>UNITED STATES 520-276-6627</p>
-  </div>
-  </div>
+ 
+  <img src="Assets/Asset24.png" alt="logo Seal of Transperency" width="70px">
     <h5>WE RESPECT YOUR PRIVACY.
       <br><br>
 
