--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
 <div class="vmieo">
   <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
-  <img src="Assets/Group1162x.png" alt="design elements with information" width="100%" class="threeCont">
+  <img src="Assets/newStatspng.png" alt="design elements with information" width="100%" class="threeCont">
   <div id="partTwo">
+    <img src="Assets/Group108.png" alt="design element" width="600px" height="600px">
         <a>DONATE NOW!</a>
   </div>
   <!--<div id="ourProjects">
