updates with logos

--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <div id="partOne">
       <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
-
-    
   </div>
 <div class="vmieo">
   <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
+<div class="stats">
   <img src="Assets/newStatspng.png" alt="design elements with information" width="100%" class="threeCont">
+</div>
+  
   <div id="partTwo">
-    <img src="Assets/Group108.png" alt="design element" width="600px" height="600px">
-        <a>DONATE NOW!</a>
+    <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
+        <a href="donate.html">DONATE NOW!</a>
   </div>
   <!--<div id="ourProjects">
     <img src="Assets/Asset19.png" alt="design element" class="purpleProject">
