--- a/donate.html
+++ b/donate.html
@@ -48,14 +48,15 @@
   <iframe src="https://player.vimeo.com/video/596141714?h=aa79faf332" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
  
-  
-
-  <div id="partTwo">
-      <h2>WILL YOU JOIN US</h2>
+<div id="partTwo">
+  <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
+  <h1>WILL YOU JOIN US</h1>
       <p>TO HELP CORRECT THE DIRE LIVING SITUATIONS
         OF THE PEOPLE OF TOGO?</p>
-        <a>DONATE BELOW!</a>
-  </div>
+        <h2>DONATE BELOW!</h2>   
+</div>
+
+  
   <div class="donAte">
     <h1>EVERY $25 DONATED 
       CHANGES A LIFE.</h1>
