--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
 
     <div id="partTwo">
       <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
-          <a>DONATE NOW!</a>
+          <a href="donate.html">DONATE NOW!</a>
     </div>
   
 </div>
