--- a/katoe.html
+++ b/katoe.html
@@ -74,12 +74,9 @@
       <p>$3,000 goal</p>
     </div>
   </div>
-  <div class="giveNow">
-    <img src="Assets/Group112x.png" alt="design element" class="groupS" width="100%">
-    <div class="middle">
-   
-      <a href="donate.html">DONATE NOW!</a>
-    </div>
+  <div id="partTwo">
+    <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
+        <a href="donate.html">DONATE NOW!</a>
   </div>
 </div>
 <div class="footer">
