video settings. new

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       TO BUILD
       TOMORROW</h1>
 </div>
-<div class="vmieo">
+<div class="videoWrapper">
   <iframe src="https://player.vimeo.com/video/596139025?h=38e3b4f05f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div class="stats">
