--- a/donate.html
+++ b/donate.html
@@ -44,7 +44,7 @@
       TO BUILD
       TOMORROW</h1>
 </div>
-<div class="vmieo">
+<div class="videoWrapper">
   <iframe src="https://player.vimeo.com/video/596141714?h=aa79faf332" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
  
