--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
   <div id="partOne">
       <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
   </div>
-<div class="vmieo">
-  <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
+  <div class="videoWrapper">
+    <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
+
 <div class="stats">
   <img src="Assets/newStatspng.png" alt="design elements with information" width="100%" class="threeCont">
 </div>
