--- a/donate.html
+++ b/donate.html
@@ -62,6 +62,8 @@
       CHANGES A LIFE.</h1>
       <img src="Assets/Group117x.png" alt="scripted code from some page" width="100%">
   </div>
+
+  <a href="https://buy.stripe.com/test_28odSigzWauZ5C8aEG">Donate Now</a>
   
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
