--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@
   
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
-  <div id="partOne">
-      <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
-  </div>
-  <div class="videoWrapper">
+  <div id="partlOne">
+    <div class="animatesss">
+    <img src="Assets/waterforall5.webp" alt="akbelu thank you" width="100%" class="letsGif">
+    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+    </div>
+    </div>
+ <!-- <div class="videoWrapper">
     <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  </div>
+  </div>-->
   
 
 <div class="stats">
-  <img src="Assets/newStatspng.png" alt="design elements with information" width="100%" class="threeCont">
+  <img src="Assets/line12x.png" alt="design elements with information" width="100%" class="square">
+  <img src="Assets/line22x.png" alt="design elements with information" width="100%" class="square">
+  <img src="Assets/line32x.png" alt="design elements with information" width="100%" class="square">
 </div>
   
   <div id="partTwo">
