--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
     <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>-->
   
-
+  <div class="square-wrapper">
+    <div class="square square-transition"></div>
+  </div>
 <div class="stats">
-  <img src="Assets/line12x.png" alt="design elements with information" width="100%" class="square">
-  <img src="Assets/line22x.png" alt="design elements with information" width="100%" class="square">
-  <img src="Assets/line32x.png" alt="design elements with information" width="100%" class="square">
+  <img src="Assets/line12x.png" alt="design elements with information" width="100%" >
+  <img src="Assets/line22x.png" alt="design elements with information" width="100%" >
+  <img src="Assets/line32x.png" alt="design elements with information" width="100%" >
 </div>
   
   <div id="partTwo">
