--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <div id="partlOne">
     <div class="animatesss">
+      <span class="colorBlue"></span>
     <img src="Assets/waterforall5.webp" alt="akbelu thank you" width="100%" class="letsGif">
     <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
     </div>
@@ -47,7 +48,7 @@
     <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>-->
   
-  <div class="square-wrapper">
+  <div class="square-wrapper stats">
     <div class="square square-transition"><img src="Assets/line12x.png" alt="design elements with information" width="100%" >
       <img src="Assets/line22x.png" alt="design elements with information" width="100%" >
       <img src="Assets/line32x.png" alt="design elements with information" width="100%" >
