all new updates...

--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
       <span class="colorBlue"></span>
     <img src="Assets/waterforall5.webp" alt="akbelu thank you" width="100%" class="letsGif">
     <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+    
+  </div>
     </div>
-    </div>
- <!-- <div class="videoWrapper">
-    <iframe src="https://player.vimeo.com/video/596144435?h=d7388c5984" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-  </div>-->
+     
   
   <div class="square-wrapper stats">
     <div class="square square-transition"><img src="Assets/line12x.png" alt="design elements with information" width="100%" >
@@ -65,7 +64,9 @@
   </div>-->
   
   <div class="box effect2">
-    OUR PROJECTS
+    <div class="typewriter">
+      <h2>OUR PROJECTS</h2>
+    </div>
     </div>
   <div class="projects">
     <div class="twoInOne">
@@ -124,7 +125,9 @@
   <div class="aboutUs">
     <img src="Assets/Group92.png" alt="team members picture" width="100%" class="people">
    <!--<img src="Assets/Group85.png" alt="design asset group of people" width="70%" class="designElement">--> 
-    <div class="box effect2">ABOUT US</div>
+    <div class="box effect2"><div class="typewriter">
+      <h2>ABOUT US</h2>
+    </div></div>
     <h3>QUALITY EDUCATION <br>
       & WATER FOR ALL <span>(QEWFA)</span></h3>
       <p>	QEWFA is a 501(c)3 nonprofit organization headquartered in Tucson, Arizona. We provide sustainable solutions to the community of Togo that addresses lack of water, contaminated water, and methods of collecting clean drinkable water in Togo. We fund and implement life-changing water well systems to drive economic development and build self-sufficient communities.<br><br>
