--- a/projects.html
+++ b/projects.html
@@ -40,8 +40,8 @@
   <div id="partlOne">
     <div class="animatesss">
       <span class="colorBlue"></span>
-    <img src="Assets/waterforall5.webp" alt="akbelu thank you" width="100%" class="letsGif">
-    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+    <img src="Assets/waterforall2.webp" alt="akbelu thank you" width="100%" class="letsGif">
+    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" height="auto">
     </div>
     </div>
   
@@ -50,7 +50,9 @@
     <h2>PROJECT KATOE</h2>
   </div>-->
   <div class="box effect2">
-    PROJECTS
+    <div class="typewriter">
+      <h1>PROJECTS</h1>
+    </div>
     </div>
 
     <div id="projectsFour">
