--- a/about.html
+++ b/about.html
@@ -38,23 +38,29 @@
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
   
-  <div id="partOne">
-    <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
-    <h1 class="qualityEducation">DONATE
-      TODAY
-      TO BUILD
-      TOMORROW</h1>
-</div>
-<div class="videoWrapper">
-  <iframe src="https://player.vimeo.com/video/596139025?h=38e3b4f05f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="stats">
-  <img src="Assets/newStatspng.png" alt="design elements with information" width="100%" class="threeCont">
-</div>
+  <div id="partlOne">
+    <div class="animatesss">
+      <span class="colorBlue"></span>
+    <img src="Assets/waterforall6.webp" alt="akbelu thank you" width="100%" class="letsGif">
+    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+    
+  </div>
+    </div>
+     
+  
+  <div class="square-wrapper stats">
+    <div class="square square-transition"><img src="Assets/line12x.png" alt="design elements with information" width="100%" >
+      <img src="Assets/line22x.png" alt="design elements with information" width="100%" >
+      <img src="Assets/line32x.png" alt="design elements with information" width="100%" >
+    </div>
+  </div>
+  
   
  
   <div class="box effect2">
-    MEET THE TEAM
+    <div class="typewriter">
+      <h2>MEET THE TEAM</h2>
+    </div>
     </div>
   <div class="theTeam">
     <div class="member">
@@ -87,7 +93,9 @@
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
         <a href="donate.html">DONATE NOW!</a>
   </div>
-  
+  <div class="videoWrapper">
+    <iframe src="https://player.vimeo.com/video/596139025?h=38e3b4f05f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  </div>
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
      <div class="container">
