--- a/donate.html
+++ b/donate.html
@@ -37,7 +37,7 @@
   
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
-  <div id="partOne">
+  <!--<div id="partOne">
     <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
     <h1 class="qualityEducation">DONATE
       TODAY
@@ -46,8 +46,15 @@
 </div>
 <div class="videoWrapper">
   <iframe src="https://player.vimeo.com/video/596141714?h=aa79faf332" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+</div>-->
+<div id="partlOne">
+  <div class="animatesss">
+    <span class="colorBlue"></span>
+  <img src="Assets/akbellu.webp" alt="akbelu thank you" width="100%" class="letsGif">
+  <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+  
 </div>
- 
+  </div>
 <div id="partTwo">
   <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
   <h1>WILL YOU JOIN US</h1>
@@ -60,11 +67,19 @@
   <div class="donAte">
     <h1>EVERY $25 DONATED 
       CHANGES A LIFE.</h1>
-      <img src="Assets/Group117x.png" alt="scripted code from some page" width="100%">
+      
   </div>
 
-  <a href="https://buy.stripe.com/test_28odSigzWauZ5C8aEG">Donate Now</a>
-  
+
+  <div id="tithely-widget-wrapper" style="width: 100%; height: 720px; position: relative; margin-top: 10px; z-index: 1; background: rgba(44, 62, 81, 0.9); box-sizing: border-box; display: flex; overflow: auto; flex-direction: column; opacity: 1;"><div style="text-align: right; margin: 8px 15px 0; font-family: 'Helvetica Neue', 'Roboto', 'Segoe UI', sans-serif; color: #fff;"></div><div id="tithely-web-widget-outer" style="position: relative; margin: 15px auto; width: 90%; height: 100%; min-width: 300px; max-width: 600px; font-family: 'Helvetica Neue', 'Roboto', 'Segoe UI', sans-serif; color: #fff; font-size: 13px;"><div id="tithely-web-widget-preloader" style="text-align: center; margin-top: 150px; opacity: 0.3; display: none;"><embed style="width: 60px; height: 60px;" type="image/svg+xml" src="https://tithe.ly/widget/ripple.svg"></div><div id="tithely-frame-wrap" style="height: 100%; width: 100%; max-width: 600px; max-height: 600px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);"><iframe id="tithely-web-widget-wrapper" frameborder="0" src="https://tithe.ly/give_new/www/#/tithely/give-one-time/768809?widget=1" width="100%" height="100%" style="overflow: hidden; box-shadow: rgb(51, 51, 51) 0px 0px 6px; background-color: rgb(255, 255, 255); border-radius: 3px; opacity: 1;"></iframe><div style="font-family: 'Helvetica Neue', 'Roboto', 'Segoe UI', sans-serif; color: #fff; margin: 8px; text-align: center;">Powered by <a target="_blank" style="color: #fff; text-decoration: none;" href="https://tithe.ly">Tithe.ly</a></div></div></div></div>
+
+
+  <!--<button class="tithely-give-btn" style="background-color: #00DB72;font-family: inherit;font-weight: bold;font-size: 19px; padding: 15px 70px; border-radius: 4px; cursor: pointer; background-image: none; color: white; text-shadow: none; display: inline-block; float: none; border: none;" data-church-id="768809">Give</button>
+  <script src="https://tithe.ly/widget/v3/give.js?3"></script>
+  -->
+
+
+
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
      <div class="container">
@@ -96,7 +111,9 @@
  
        THIS SITE IS PROTECTED BY RECAPTCHA AND THE GOOGLE PRIVACY POLICY AND TERMS OF SERVICE APPLY.</h5>
    </div>
- </div>
+ </div><script>
+  var tw = create_tithely_widget();
+  </script>
         <script src="javascript/app.js"></script>
 </body>
 </html>
