--- a/Back-2-school-drive.html
+++ b/Back-2-school-drive.html
@@ -38,8 +38,13 @@
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <div id="partOne">
-    <img src="Assets/QWEFA-logo .png" alt="lof of the organization" width="100%">
-</div>
+    <div class="animatesss">
+      <span class="colorBlue"></span>
+    <img src="Assets/Asset1.png" alt="akbelu thank you" width="100%" class="letsGif">
+    <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
+    
+  </div>
+    </div>
   
  <!-- <div id="ourProjects">
     <img src="Assets/Asset19.png" alt="designe lement"width="100%">
