--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <a href="katoe.html" class="learnMore">Learn more...</a>
     </div>
     <div class="project top">
-      <img src="Assets/two.png" alt="bacgkround of Africa" width="100%">
+      <img src="Assets/Bback-to-school.png" alt="bacgkround of Africa" width="100%">
       <h2>Back 2 School Drive</h2>
       <div id="myProgress">
         <div id="myBar2"></div>
