--- a/Back-2-school-drive.html
+++ b/Back-2-school-drive.html
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-  <div class="project top tops" style="margin-top: 30px; width: 100%;">
+  <div class="project top tops" style="margin-top: 30px; width: 100%;padding: 10px;">
    
     <h2>Back 2 School Drive</h2>
     <div id="myProgress">
