--- a/katoe.html
+++ b/katoe.html
@@ -85,7 +85,7 @@
 
   
 
-  <div class="project top tops" style="width: 100%; margin-top: 25px;">
+  <div class="project top tops" style="width: 100%; margin-top: 30px; padding: 10px;">
     
     <h2>Project KATOE</h2>
     <div id="myProgress">
