--- a/Community-Center.html
+++ b/Community-Center.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-  <div class="project top tops" style="margin-top: 30px; width: 100%;">
+  <div class="project top tops" style="margin-top: 30px; width: 100%; padding: 10px;">
     <h2>Community Center</h2>
     <div id="myProgress">
       <div id="myBar3"></div>
