page name changed

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <p>25% supported</p>
         <p>2,000 kids goal</p>
       </div>
-      <a href="Children-Sponsered.html" class="learnMore">Learn more...</a>
+      <a href="sponsor-a-child.html" class="learnMore">Learn more...</a>
     </div>
     </div>
   </div>
