--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -38,7 +38,7 @@
   <!-- Use any element to open/show the overlay navigation menu -->
   <span class="mobileMenu" style="font-size:50px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <div id="partOne">
-    <div class="animatesss">
+    <div class="animatesss5">
       <span class="colorBlue"></span>
     <img src="Assets/Asset1.png" alt="akbelu thank you" width="100%" class="letsGif">
     <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
