--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -44,6 +44,13 @@
     
   </div>
     </div>
+
+    <div id="mySidenav5" class="sidenav5">
+      <a href="projects.html" id="menu1">Project KATOE</a>
+      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
+      <a href="Community-Center.html" id="menu3">Community Center</a>
+      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
+    </div>
  <!-- <div id="ourProjects">
     <img src="Assets/Asset19.png" alt="designe lement"width="100%">
     <h2>PROJECT KATOE</h2>
