--- a/Community-Center.html
+++ b/Community-Center.html
@@ -51,13 +51,6 @@
     <h2>PROJECT KATOE</h2>
   </div>-->
 
-  <div id="mySidenav5" class="sidenav5">
-    <a href="katoe.html" id="menu1">Project KATOE</a>
-    <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
-    <a href="Community-Center.html" id="menu3">Community Center</a>
-    <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
-  </div>
-
   <div class="box effect2">
     Community Center
     </div>
@@ -71,6 +64,12 @@
           <img src="Assets/community-center2.png" alt="kid is gatherign water in his bottle froma stream">
         </div>
       </div>
+    </div>
+    <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+    <div id="mySidenav5" class="sidenav5">
+      <a href="katoe.html" id="menu1">Project KATOE</a>
+      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
+      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
     </div>
 
   <div class="project top tops" style="margin-top: 30px; width: 100%; padding: 10px;">
