--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -44,13 +44,6 @@
     
   </div>
     </div>
-
-    <div id="mySidenav5" class="sidenav5">
-      <a href="katoe.html" id="menu1">Project KATOE</a>
-      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
-      <a href="Community-Center.html" id="menu3">Community Center</a>
-      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
-    </div>
  <!-- <div id="ourProjects">
     <img src="Assets/Asset19.png" alt="designe lement"width="100%">
     <h2>PROJECT KATOE</h2>
@@ -64,23 +57,18 @@
         <div class="katoeLeft">
           <p>&emsp; Sponsoring a child is a way of directly helping a child that is dire need. Your help goes towards improving the physical emotional and social well-being of the child. For a child to know that they have someone who cares enough to help them in live give them the motivation to excel intellectual and become reputable leaders in society.</p>
           <p>&emsp; When you become a sponsor you receive regular updates on the child’s progress in live from our local staff. You enable the child be part of community activities such as children’s learning events and community events.</p>
-        
-          <div class="project top tops" style="padding: 10px; width: 100%; margin-top: 30px;">
-            <h2>Children Sponsered</h2>
-            <div id="myProgress">
-              <div id="myBar4"></div>
-            </div>
-            <div class="priceProgress">
-              <p>25% supported</p>
-              <p>2,000 kids goal</p>
-            </div>
-          </div>
-
         </div>
         <div class="katoeRight">
           <img src="Assets/sponsor-a-child.png" alt="kid is gatherign water in his bottle froma stream">
         </div>
       </div>
+    </div>
+
+    <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+    <div id="mySidenav5" class="sidenav5">
+      <a href="katoe.html" id="menu1">Project KATOE</a>
+      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
+      <a href="Community-Center.html" id="menu3">Community Center</a>
     </div>
 
   <div class="project top tops" style="padding: 10px; width: 100%; margin-top: 30px;">
