--- a/katoe.html
+++ b/katoe.html
@@ -52,13 +52,6 @@
     <h2>PROJECT KATOE</h2>
   </div>-->
 
-  <div id="mySidenav5" class="sidenav5">
-    <a href="katoe.html" id="menu1">Project KATOE</a>
-    <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
-    <a href="Community-Center.html" id="menu3">Community Center</a>
-    <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
-  </div>
-
   <div class="box effect2">
     PROJECT KATOE
     </div>
@@ -91,7 +84,12 @@
   
 </div>
 
-  
+    <h1 style="text-align: center; color: #2196F3;">Scroll down to continue viewing projects...</h1>
+    <div id="mySidenav5" class="sidenav5">
+      <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
+      <a href="Community-Center.html" id="menu3">Community Center</a>
+      <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
+    </div>
 
   <div class="project top tops" style="width: 100%; margin-top: 30px; padding: 10px;">
     
