--- a/Community-Center.html
+++ b/Community-Center.html
@@ -71,7 +71,7 @@
       <a href="Back-2-school-drive.html" id="menu2">Back 2 School Drive</a>
       <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
     </div>
-
+    <div class="iJustNeedPadding">
   <div class="project top tops" style="margin-top: 30px; width: 100%; padding: 10px;">
     <h2>Community Center</h2>
     <div id="myProgress">
@@ -82,6 +82,7 @@
       <p>$40,000 goal</p>
     </div>
   </div>
+</div>
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
         <a href="donate.html">DONATE NOW!</a>
