--- a/katoe.html
+++ b/katoe.html
@@ -91,8 +91,8 @@
       <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
     </div>
 
+    <div class="iJustNeedPadding">
   <div class="project top tops" style="width: 100%; margin-top: 30px; padding: 10px;">
-    
     <h2>Project KATOE</h2>
     <div id="myProgress">
       <div id="myBar1"></div>
@@ -102,11 +102,11 @@
       <p>$3,000 goal</p>
     </div>
   </div>
+</div>
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
         <a href="donate.html">DONATE NOW!</a>
   </div>
-</div>
 <div class="footer">
   <h1>Stay connected with QEWFA!</h1>
    <div class="container">
