--- a/sponsor-a-child.html
+++ b/sponsor-a-child.html
@@ -71,6 +71,7 @@
       <a href="Community-Center.html" id="menu3">Community Center</a>
     </div>
 
+    <div class="iJustNeedPadding">
   <div class="project top tops" style="padding: 10px; width: 100%; margin-top: 30px;">
     <h2>Children Sponsered</h2>
     <div id="myProgress">
@@ -81,11 +82,12 @@
       <p>2,000 kids goal</p>
     </div>
   </div>
+</div>
+
   <div id="partTwo">
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
         <a href="donate.html">DONATE NOW!</a>
   </div>
-</div>
 <div class="footer">
   <h1>Stay connected with QEWFA!</h1>
    <div class="container">
