--- a/Back-2-school-drive.html
+++ b/Back-2-school-drive.html
@@ -72,9 +72,9 @@
       <a href="sponsor-a-child.html" id="menu4">Sponsor a Child</a>
     </div>
 
+    <div class="iJustNeedPadding">
   <div class="project top tops" style="margin-top: 30px; width: 100%;padding: 10px;">
-   
-    <h2>Back 2 School Drive</h2>
+      <h2>Back 2 School Drive</h2>
     <div id="myProgress">
       <div id="myBar2"></div>
     </div>
@@ -88,7 +88,6 @@
     <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
         <a href="donate.html">DONATE NOW!</a>
   </div>
-</div>
 <div class="footer">
   <h1>Stay connected with QEWFA!</h1>
    <div class="container">
