--- a/donate.html
+++ b/donate.html
@@ -48,9 +48,9 @@
   <iframe src="https://player.vimeo.com/video/596141714?h=aa79faf332" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>-->
 <div id="partlOne">
-  <div class="animatesss">
+  <div class="animatesss7">
     <span class="colorBlue"></span>
-  <img src="Assets/akbellu.webp" alt="akbelu thank you" width="100%" class="letsGif">
+  
   <img class="logoQe" src="Assets/QWEFA-logo .png" alt="logo of the organization" width="100%" >
   
 </div>
@@ -71,12 +71,6 @@
   <!--<button class="tithely-give-btn" style="background-color: #00DB72;font-family: inherit;font-weight: bold;font-size: 19px; padding: 15px 70px; border-radius: 4px; cursor: pointer; background-image: none; color: white; text-shadow: none; display: inline-block; float: none; border: none;" data-church-id="768809">Give</button>
   <script src="https://tithe.ly/widget/v3/give.js?3"></script>
   -->
-
-  <div id="partTwo2">
-    <img src="Assets/Group108.png" alt="design element" width="100%" height="100%">
-    <h1>THANK YOU !</h1>
-        
-  </div>
 
   <div class="footer">
     <h1>Stay connected with QEWFA!</h1>
